--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-APScheduler
-black
-datasets
-gradio
-gradio[oauth]
-gradio_leaderboard==0.0.13
-gradio_client
-huggingface-hub>=0.18.0
-matplotlib
-numpy
-pandas
-python-dateutil
-tqdm
-transformers
-tokenizers>=0.15.0
-sentencepiece
-smolagents
 duckduckgo_search
+markdownify
+requests
+smolagents
